--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,10 @@
     "react-dropzone": "^11.2.0",
     "react-icons": "^3.7.0",
     "react-image-gallery": "^1.0.8",
+    "react-paypal-express-checkout": "^1.0.5",
     "react-redux": "^7.1.0-rc.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "redux": "^4.0.0",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
